--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 <p>qwer qwer</p>
+<h1>Hello world!</h1>
+<p>This is the first file in my new Git Repo.</p>
+<p>A new line in our file!</p>
+<p>qwer qwer</p>
 </body>
 </html>
