--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 <p>qwer qwer</p>
+
+
+<img src="cargo  1.png" alt="">
 </body>
 </html>
