--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-<p>qwer qwer</p>
+<p>qwer</p>
 
 
 <img src="cargo  1.png" alt="">
