add new picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>A new line in our file!</p>
 <p>qwer qwer</p>
 
-
+<img src="cargo  1.png" alt="">
 <img src="cargo  1.png" alt="">
 </body>
 </html>
